migrate to MFD UI elements, fix errors

--- a/fbw-a380x/src/systems/instruments/src/ND/OansControlPanel.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/OansControlPanel.scss
@@ -3,11 +3,10 @@
 @font-face {
   font-family: "Ecam";
   //noinspection CssUnknownTarget
-  src: url("/Fonts/ECAMFontRegular.ttf") format("truetype");
+  src: url("/Fonts/FBW-Display-EIS-A380.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-
 $display-mfd-darker-grey: #3c3c3c;
 
 .oans-info-box {
