update copyright claims

--- a/fbw-a380x/src/systems/instruments/src/ND/OansControlPanel.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/OansControlPanel.scss
@@ -1,4 +1,7 @@
-﻿@import "../MsfsAvionicsCommon/definitions.scss";
+﻿// Copyright (c) 2024 FlyByWire Simulations
+// SPDX-License-Identifier: GPL-3.0
+
+@import "../MsfsAvionicsCommon/definitions.scss";
 
 @font-face {
   font-family: "Ecam";
