--- a/fbw-a380x/src/systems/instruments/src/ND/animations.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/animations.scss
@@ -1,3 +1,6 @@
+// Copyright (c) 2024 FlyByWire Simulations
+// SPDX-License-Identifier: GPL-3.0
+
 @keyframes blinking {
   0% {opacity: 0;}
   50% {opacity: 0;}
