--- a/fbw-a380x/src/systems/instruments/src/ND/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/style.scss
@@ -1,3 +1,6 @@
+// Copyright (c) 2021-2024 FlyByWire Simulations
+// SPDX-License-Identifier: GPL-3.0
+
 @import "../MsfsAvionicsCommon/definitions.scss";
 @import "animations";
 
@@ -25,6 +28,7 @@
   height: 768px;
   background: transparent;
   font-family: "Ecam", monospace !important;
+  pointer-events: none;
 }
 
 .nd-canvas-map {
