--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/html_ui/Pages/VCockpit/Instruments/LegacyA380X/FCU/A380_FCU.css
@@ -39,14 +39,14 @@
 
 @font-face {
   font-family: "Poppins-SemiBold";
-  src: url("/Fonts/Poppins-SemiBold.ttf") format("truetype");
+  src: url("/Fonts/fbw-a380x/Poppins-SemiBold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Digital";
-  src: url("/Fonts/A380X_FCU.ttf") format("truetype");
+  src: url("/Fonts/fbw-a380x/A380X_FCU.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
