remove ARC terrain mask for A380X

--- a/fbw-a380x/src/systems/instruments/src/ND/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/ND/style.scss
@@ -246,3 +246,11 @@ path.rounded {
   stroke-linecap: round;
   stroke-linejoin: round;
 }
+
+.hidden {
+  display: none;
+}
+
+.a380xInvisible {
+  display: none;
+}
