--- a/fbw-a32nx/src/systems/instruments/src/ND/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/ND/style.scss
@@ -236,3 +236,11 @@ path.rounded {
   stroke-linecap: round;
   stroke-linejoin: round;
 }
+
+.hidden {
+  display: none;
+}
+
+.a380xInvisible {
+  display: block;
+}
