--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -152,6 +152,10 @@ text.Magenta {
   fill: $display-magenta;
   stroke: none;
 }
+tspan.Magenta {
+  fill: $display-magenta;
+  stroke: none;
+}
 
 .Cyan {
   fill: none;
@@ -191,6 +195,10 @@ text.White {
   fill: $display-white;
   stroke: none;
 }
+tspan.White {
+  fill: $display-white;
+  stroke: none;
+}
 
 .Green {
   stroke: $display-green;
@@ -206,12 +214,20 @@ text.Green {
   fill: $display-green;
   stroke: none;
 }
+tspan.Green {
+  fill: $display-green;
+  stroke: none;
+}
 
 .Amber {
   stroke: $display-amber;
   fill: none;
 }
 text.Amber {
+  fill: $display-amber;
+  stroke: none;
+}
+tspan.Amber {
   fill: $display-amber;
   stroke: none;
 }
@@ -228,6 +244,10 @@ text.Yellow {
   fill: $display-yellow;
   stroke: none;
 }
+tspan.Yellow {
+  fill: $display-yellow;
+  stroke: none;
+}
 
 .Red {
   stroke: $display-red;
@@ -238,6 +258,10 @@ text.Yellow {
   stroke: none;
 }
 text.Red {
+  fill: $display-red;
+  stroke: none;
+}
+tspan.Red {
   fill: $display-red;
   stroke: none;
 }
