add short term managed indication on pfd

--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -148,6 +148,11 @@
   fill: none;
   stroke: $display-magenta;
 }
+
+.Magenta.Fill {
+  fill: $display-magenta;
+}
+
 text.Magenta {
   fill: $display-magenta;
   stroke: none;
