--- a/fbw-a380x/src/systems/instruments/src/PFD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/PFD/style.scss
@@ -156,6 +156,9 @@ tspan.Magenta {
   fill: $display-magenta;
   stroke: none;
 }
+.Fill.Magenta {
+  fill: $display-magenta;
+}
 
 .Cyan {
   fill: none;
