--- a/fbw-a380x/src/systems/instruments/src/FCU/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/FCU/style.scss
@@ -1,5 +1,7 @@
-﻿/* Copyright (c) 2023-2024 FlyByWire Simulations */
-/* SPDX-License-Identifier: GPL-3.0 */
+// Copyright (c) 2023-2024 FlyByWire Simulations
+// SPDX-License-Identifier: GPL-3.0
+
+@import "./definitions.scss";
 
 :root {
   --bodyHeightScale: 1;
@@ -36,45 +38,44 @@
   display: none;
 }
 
-
-@font-face {
-  font-family: "Poppins-SemiBold";
-  src: url("/Fonts/fbw-a380x/Poppins-SemiBold.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Digital";
-  src: url("/Fonts/fbw-a380x/A380X_FCU.ttf") format("truetype");
-  font-weight: 900;
-  font-style: normal;
-}
-
-:root {
-  --main-display-colour-background: hsl(248, 94%, 53%);
-  --main-display-colour: hsl(0, 0%, 100%);
-  --main-display-colour-inactive: hsl(248, 94%, 48%);
-}
-
 :root text.Common {
   width: 100%;
   height: 100%;
 }
 
+.Invisible {
+  visibility: hidden;
+}
+
+text.Label {
+  font-family: "Poppins-SemiBold";
+  font-size: 230px;
+  fill: $display-colour-inactive;
+}
+
+.Baro text.Label {
+  font-size: 210px;
+}
+
+text.Label.Visible {
+  fill: $display-colour;
+}
+
+// deprecated
 :root text.Active {
   font-family: "Poppins-SemiBold";
   font-size: 230px;
-  fill: var(--main-display-colour);
+  fill: $display-colour;
 }
 :root text.Active.BaroValue {
   font-size: 210px;
 }
 
+// deprecated
 :root text.Inactive {
   font-family: "Poppins-SemiBold";
   font-size: 230px;
-  fill: var(--main-display-colour-inactive);
+  fill: $display-colour-inactive;
 }
 :root text.Inactive.BaroValue {
   font-size: 210px;
@@ -84,11 +85,11 @@
   font-family: Digital;
   font-size:440px;
   text-anchor: start;
-  fill: var(--main-display-colour);
+  fill: $display-colour;
   letter-spacing: 0px;
 }
 
-:root text.BaroValue {
+:root .Baro text.Value {
   font-size: 400px;
 }
 
@@ -99,39 +100,39 @@
 }
 
 :root line {
-  stroke: var(--main-display-colour);
+  stroke: $display-colour;
   stroke-width: 5;
 }
 
 :root circle {
-  fill: var(--main-display-colour);
+  fill: $display-colour;
 }
 
-a380-fcu-element {
+#FCU_CONTENT {
   width: 100%;
   height: 100%;
-  background-color: var(--main-display-colour-background);
+  background-color: $display-colour-background;
   font-family: "Poppins-SemiBold";
   position: relative;
   overflow: hidden;
 }
 
-a380-fcu-element #Mainframe {
+#FCU_CONTENT #Mainframe {
   width: 100%;
   height: 100%;
   display: block;
   position: relative;
 }
 
-a380-fcu-element #Mainframe #LargeScreen {
+#FCU_CONTENT #Mainframe #LargeScreen {
   width: 100%;
   height: 16%;
   display: block;
   position: absolute;
-  background-color: var(--main-display-colour-background);
+  background-color: $display-colour-background;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #Speed {
+#FCU_CONTENT #Mainframe #LargeScreen #Speed {
   width: 30%;
   height: 100%;
   left: 5%;
@@ -139,53 +140,79 @@ a380-fcu-element #Mainframe #LargeScreen #Speed {
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #Heading {
+#FCU_CONTENT #Mainframe #LargeScreen #Heading {
   width: 30%;
   height: 100%;
   left: 50%;
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #Mode {
+#FCU_CONTENT #Mainframe #LargeScreen #Mode {
   width: 20%;
   height: 100%;
   left: 80%;
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #AltVS {
+#FCU_CONTENT #Mainframe #LargeScreen #AltVS {
   width: 40%;
   height: 100%;
   left: 120%;
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #AltVS #Altitude {
+#FCU_CONTENT #Mainframe #LargeScreen #AltVS #Altitude {
   width: 100%;
   height: 100%;
   left: 0%;
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #LargeScreen #AltVS #VerticalSpeed {
+#FCU_CONTENT #Mainframe #LargeScreen #AltVS #VerticalSpeed {
   width: 100%;
   height: 100%;
   left: 95%;
   position: absolute;
 }
 
-a380-fcu-element #Mainframe #SmallScreen {
+#FCU_CONTENT #Mainframe #SmallScreen {
   width: 27%;
   height: 17%;
   display: block;
   position: absolute;
   top: 16%;
-  background-color: var(--main-display-colour-background);
+  background-color: $display-colour-background;
 }
 
-a380-fcu-element #Mainframe #SmallScreen #Selected,
-a380-fcu-element #Mainframe #SmallScreen #Standard {
+#FCU_CONTENT #Mainframe #SmallScreen #Selected,
+#FCU_CONTENT #Mainframe #SmallScreen #Standard {
   width: 100%;
   height: 100%;
   top: 0;
+}
+
+.NdData {
+  position: absolute;
+}
+
+.NdData.LeftSide {
+  top: 1750px;
+  left: 240px;
+}
+
+.NdData.RightSide {
+  top: 2900px;
+  left: 300px;
+}
+
+.NdData .TopRow {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.NdData .BottomRow {
+  position: absolute;
+  top: 550px;
+  left: 0;
 }
