fix ND context menu font

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -451,6 +451,7 @@
 }
 
 .mfd-context-menu {
+  font-family: "Ecam", monospace;
   background-color: $display-mfd-darker-grey;
   border: 2px outset $display-light-grey;
   position: absolute;
