enable/disable via EFB

--- a/fbw-a380x/src/systems/instruments/src/EWD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/EWD/style.scss
@@ -480,10 +480,10 @@ text, tspan, span {
   border-bottom: 3px solid $display-white;
 }
 
-.EclClickspots {
+.EclSoftKeys {
   position: absolute;
   top: 965px;
-  right: 0px;
+  right: 3px;
   display: flex;
   flex-direction: row;
 }
