--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFplnOffset.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFplnOffset.scss
@@ -1,13 +1,21 @@
 @import "../../../../MsfsAvionicsCommon/definitions";
 
 .mfd-fms-fpln-offset-waypoint-text-grid {
+  padding-top: 20px;
   display: grid;
-  grid-template-columns: 280px 280px 15px 280px;
+  grid-template-columns: 200px 200px 30px 200px;
+  padding-left: 25px;
   margin-top: 10px;
   padding-bottom: 15px;
 }
 
 .mfd-offset-dist-angle-input-grid {
   display: grid;
-  grid-template-columns: auto;
+  grid-template-columns: 400px;
+  padding-top: 20px;
+}
+
+mfd-offset-dist-input-grid {
+  display: grid;
+  grid-template-columns: 200px 200px;
 }
