feat(a380x): QoL: Add virtual ECL soft keys (#9377)
* add virtual ECL clickspots

* enable/disable via EFB

* use AircraftContext

* title case

* changelog

--- a/fbw-a380x/src/systems/instruments/src/EWD/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/EWD/style.scss
@@ -479,3 +479,11 @@ text, tspan, span {
 .EclLineEndMarker.Last {
   border-bottom: 3px solid $display-white;
 }
+
+.EclSoftKeys {
+  position: absolute;
+  top: 965px;
+  right: 3px;
+  display: flex;
+  flex-direction: row;
+}
