--- a/fbw-a380x/src/systems/instruments/src/BAT/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/BAT/style.scss
@@ -19,6 +19,10 @@ $colour-main: hsl(0, 0%, 100%);
 
 .bat-svg.off {
   background-color: hsla(0, 0%, 0%, 0);
+
+  > text {
+    display: none;
+  }
 }
 
 text {
