--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -776,6 +776,40 @@
   margin-bottom: 2px;
 }
 
+.mfd-surv-status-button {
+  background-color: #3c3c3c;
+  height: 60px;
+  width: 90px;
+  position: absolute;
+  top: -35px;
+  left: 0px;
+  right: 0px;
+  margin: auto;
+  border: 2px solid $display-light-grey;
+}
+
+.mfd-surv-status-button:hover {
+  border-color: $display-cyan;
+}
+
+.mfd-surv-status-button-label {
+  text-align: center;
+  font-size: 22px;
+  padding-top: 3px;
+  color: $display-white;
+  font-family: "Ecam", monospace;
+}
+
+.mfd-surv-status-indicator {
+  width: 100%;
+  height: 14.3%;
+  background-color: $display-light-grey;
+}
+
+.mfd-surv-status-indicator.active {
+  background-color: $display-green;
+}
+
 .hidden {
   display: none;
 }
