--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFplnOffset.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/FMS/F-PLN/MfdFmsFplnOffset.scss
@@ -4,7 +4,7 @@
   padding-top: 20px;
   display: grid;
   grid-template-columns: 200px 200px 30px 200px;
-  padding-left: 25px;
+  padding-left: 5px;
   margin-top: 10px;
   padding-bottom: 15px;
 }
@@ -17,4 +17,11 @@
 .mfd-offset-dist-input-grid {
   display: grid;
   grid-template-columns: 150px 150px;
+}
+
+.mfd-offset-ret-canc-tmpy-grid {
+  padding-top: 440px;
+  grid-column: span 4;
+  display: grid;
+  grid-template-columns: 251px 256px 248px;
 }
