each item a separate component

--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/common/style.scss
@@ -810,6 +810,18 @@
   background-color: $display-green;
 }
 
+.mfd-surv-status-item {
+  font-size: 24px;
+}
+
+.mfd-surv-status-item.active {
+  color: $display-green;
+}
+
+.mfd-surv-status-item.failed {
+  color: $display-amber;
+}
+
 .hidden {
   display: none;
 }
