add decel  indicator - declutter modes in all phases

--- a/fbw-a32nx/src/systems/instruments/src/HUD/style.scss
+++ b/fbw-a32nx/src/systems/instruments/src/HUD/style.scss
@@ -289,3 +289,19 @@ text.Red {
 .HiddenElement {
   display: none;
 }
+.GreenFill{
+  fill: #00ff0080;
+}
+.InverseGreen{
+  stroke: #000000;
+}
+.Test{
+  fill: #ff000080;
+}
+.Test{
+  stroke: #ff0000;
+}
+
+.noFill{
+  fill: none;
+}
