--- a/fbw-a380x/src/systems/instruments/src/MFD/pages/ATCCOM/MfdAtccomConnect.scss
+++ b/fbw-a380x/src/systems/instruments/src/MFD/pages/ATCCOM/MfdAtccomConnect.scss
@@ -14,20 +14,21 @@
 
 .mfd-atccom-connect-col-1 {
   align-items: flex-end;
-  width: 250px;
+  width: 305px;
   text-align: right;
+  padding-right: 20px;
 }
 
 .mfd-atccom-connect-col-2 {
   align-items: flex-start;
-  width: 200px;
+  width: 167px;
 }
 
 .mfd-atccom-connect-col-3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
+  width: 296px;
 }
 
 .mfd-atccom-connect-atc-row {
@@ -53,8 +54,25 @@
 }
 
 .mfd-atccom-connect-connected-centers-list {
-  height: 250px;
+  height: 265px;
   border: 2px solid $display-light-grey;
-  width: 300px;
+  width: 360px;
+  margin-top: 0px;
+  margin-left: 26px;
+}
+
+.mfd-atccom-connect.mfd-label {
+  font-size: 22px;
+}
+
+.mfd-atccom-connect-adscbutton .mfd-adsc-button {
+  width: 200px;
+  height: 70px;
+  margin-top: 10px;
+}
+
+.mfd-atccom-connect-adscEmerbutton .mfd-adsc-button {
+  width: 110px;
+  height: 70px;
   margin-top: 10px;
 }
