Display toggle logic  of  hud elements continued.

--- a/fbw-a32nx/src/systems/instruments/src/HUD/shared/definitions.scss
+++ b/fbw-a32nx/src/systems/instruments/src/HUD/shared/definitions.scss
@@ -15,4 +15,5 @@ $display-magenta: #ff94ff;
 $display-red: #ff0000;
 $display-yellow: #ffff00;
 
-$display-background: #040404;
+$display-background: #000000;
+// $display-background: #040404;
